fix text-align

--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ q {
 }
 
 .text-right {
-  text-align: end;
+  text-align: right;
 }
 
 .intro {
